Remove all bearerToken auth from frontend and server code. Only use cookie for auth. Remove isLoggedIn() behavior that depends on it. If we're not logged in, we'll get a 401 on an XHR and redirect to the login page. Fix authSvc bug related to basePath and login next interacting. If a basePath was set, we would redirect to /basePath/basePath/whatever.

--- a/frontend/public/tokener.html
+++ b/frontend/public/tokener.html
@@ -7,7 +7,7 @@
       var json = [[.]];
       var error;
       try {
-        ['exp', 'email', 'name', 'userID', 'bearerToken'].forEach(function (key) {
+        ['exp', 'email', 'name', 'userID'].forEach(function (key) {
           localStorage.setItem(key, json[key]);
         });
       } catch (e) {
